# BridgeCoin

./: .clang-format  .cmake-format.yaml  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: analysers.yml  build.yml
ci/: check-cmake-format.sh  check-commit-format.sh
cmake/: CompilerWarnings.cmake  Conan.cmake  StandardProjectSettings.cmake
cmake/secp256k1/: CMakeLists.txt
scripts/unix/: clang-format-all.sh  cmake-format-all.sh
src/: CMakeLists.txt  main.cpp
src/algorithms/: CMakeLists.txt  compile_time_operations.hpp  concepts.hpp
src/blocks/: CMakeLists.txt  blocks.cpp  blocks.hpp
src/config/: CMakeLists.txt  paths.cpp  paths.hpp
src/core/: units.hpp
src/debugging/: CMakeLists.txt  stacktrace.cpp  stacktrace.hpp
src/hashing/: CMakeLists.txt  hashing.cpp  hashing.hpp
src/ledger_store/: CMakeLists.txt  ledger_store.hpp  rocksdb_ledger_store.cpp  rocksdb_ledger_store.hpp
src/signing/: CMakeLists.txt  bls_signing.cpp  bls_signing.hpp  signing.cpp  signing.hpp
test/: CMakeLists.txt  config.cpp  hashing.cpp  ledger_store.cpp  signing.cpp  tests.cpp
